<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AlMaghrib</string>

    <string name="choose_city_text">To Get Started\nSelect Your Closest City</string>
    <string name="have_almaghrib_account">Have an AlMaghrib Account?</string>
    <string name="startup_screen_go_text">Go</string>
    <string name="startup_screen_login_button_text">Login</string>
    <string name="logging_in_dialog_title">Logging in...</string>
    <string name="log_in_failed_snackbar_text">Log in failed. Please try again.</string>

    <string name="action_settings">Settings</string>
    <string name="social">Social</string>
    <string name="our_instructors">Our Instructors</string>
    <string name="title_help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="title_contact">Contact Us</string>

    <string name="more_videos">MORE VIDEOS</string>

    <string name="title_section1">YouTube</string>
    <string name="title_section2">Facebook</string>
    <string name="title_section3">Twitter</string>
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <string name="drawer_opened_title">Navigate</string>

    <string name="latest_videos">LATEST VIDEOS</string>
    <string name="latest_status">LATEST STATUSES</string>
    <string name="latest_tweets">LATEST TWEETS</string>

    <string name="twitter_sign_in_dialog_title">Sign in with Twitter</string>

    <string name="choose_instructor">Choose an instructor</string>

    <string name="register_url">http://almaghrib.org/seminars</string>

    <string name="no_internet_message">No internet connection</string>
    <string name="loading_text">Loading...</string>

    <!-- Facebook App Id -->
    <string name="facebook_app_id">301385320059899</string>

    <!-- Fabric Api Key -->
    <string name="fabric_api_key">c4ffb7e14ad5a2488af3e0fe93fbd5605a2ded24</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Social</item>
        <item >Instructors</item>
        <item >Seminars</item>
        <item >Register</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_social">Social</string>
    <string name="title_instructors">Instructors</string>
    <string name="title_seminars">Seminars</string>
    <string name="title_register">Register</string>
    <string name="title_my_account">My Account</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/instructors</item>
        <item>@drawable/instructors</item>
        <item>@drawable/seminars</item>
        <item>@drawable/register</item>
    </array>

    <string name="upcoming_events">Upcoming Events</string>
    <!-- Nav Drawer Menu Upcoming Events category Items -->
    <string-array name="nav_drawer_upcoming_category_items">
        <item >IlmFest</item>
        <item >IlmSummit</item>
    </string-array>

    <string name="title_ilmfest">IlmFest</string>
    <string name="title_ilmsummit">IlmSummit</string>

    <!-- Nav Drawer List Item Upcoming Events category Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_upcoming_category_icons">
        <item>@drawable/ilmfest</item>
        <item>@drawable/ilmsummit</item>
    </array>

    <!-- Channel Titles -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="channel_titles">
        <item>Al Maghrib Trailers</item>
        <item>Yasir Qadhi</item>
        <item>Saad Tasleem</item>
        <item>Riad Ouarzazi</item>
        <item>Yasmin Mogahed</item>
    </string-array>

    <!-- Channel Ids -->
    <!-- Keep them in order as the channel titles are in -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="channel_ids">
        <item>UC1B7kOnMRdPuP0rxW6mS7_A</item>
        <item>UClUa7-iHJNKEM2e_zWYSPQg</item>
        <item>UCGzdb458mefm-8w-kV_qv6g</item>
        <item>UCQcNSBFpNa6vdGzZ6TJI-MA</item>
        <item>UCjr67rJYy3mtZgF-hx6lQhA</item>
    </string-array>

    <!-- Facebook Feed Titles -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="facebook_feed_titles">
        <item>AlMaghrib Institute</item>
        <item>Abu Eesa</item>
        <item>Muhammad Alshareef</item>
        <item>Yasir Qadhi</item>
        <item>Omar Suleiman</item>
    </string-array>

    <!-- Facebook Feed Ids -->
    <!-- Keep them in order as the facebook feed titles are in -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="facebook_feed_ids">
        <item>almaghribworld</item>
        <item>AbuEesaPersonal</item>
        <item>nationbuilder.prime</item>
        <item>yasir.qadhi</item>
        <item>imamomarsuleiman</item>
    </string-array>

    <!-- Twitter timeline Titles -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="twitter_timeline_titles">
        <item>AlMaghrib Institute</item>
        <item>Yasir Qadhi</item>
        <item>Waleed Basyouni</item>
    </string-array>

    <!-- Twitter timeline Ids -->
    <!-- Keep them in order as the Twitter timeline titles are in -->
    <!-- TODO: move to a file on disk to retrieve from a server -->
    <string-array name="twitter_timeline_ids">
        <item>almaghrib</item>
        <item>YasirQadhi</item>
        <item>waleedkbasyouni</item>
    </string-array>

    <!-- Instructor names -->
    <string-array name="instructor_names">
        <item>Muhammad Alshareef</item>
        <item>Abu Eesa Niamatullah</item>
        <item>Yasir Qadhi</item>
        <item>Waleed Basyouni</item>
        <item>Yaser Birjas</item>
        <item>Abdullah Hakim Quick</item>
        <item>Omar Suleiman</item>
        <item>Kamal El Mekki</item>
        <item>Reda Bedeir</item>
        <item>Riad Ouarzazi</item>
        <item>Saad Tasleem</item>
        <item>AbdulBary Yahya</item>
        <item>Ahsan Hanif</item>
        <item>Navaid Aziz</item>
        <item>Said Rageah</item>
        <item>Mohammed Faqih</item>
        <item>Yasmin Mogahed</item>
        <item>Abdul Nasir Jangda</item>
    </string-array>

    <string name="instructor_profile_directory">instructor_profiles</string>

    <!-- Instructor profile files -->
    <!-- Keep them in order as instructor_names are in -->
    <string-array name="instructor_profile_json_files">
        <item>muhammad_alshareef_profile.json</item>
        <item>abueesa_niamatullah_profile.json</item>
        <item>yasir_qadhi_profile.json</item>
        <item>waleed_basyouni_profile.json</item>
        <item>muhammad_alshareef_profile.json</item>
        <item>abdullah_hakim_quick_profile.json</item>
        <item>omar_suleiman_profile.json</item>
        <item>kamal_mekki_profile.json</item>
        <item>reda_bedeir_profile.json</item>
        <item>riad_ouarzazi_profile.json</item>
        <item>saad_tasleem_profile.json</item>
        <item>abdulbary_yahya_profile.json</item>
        <item>ahsan_hanif_profile.json</item>
        <item>navaid_aziz_profile.json</item>
        <item>said_rageah_profile.json</item>
        <item>mohammed_faqih_profile.json</item>
        <item>yasmin_mogahed_profile.json</item>
        <item>abdul_nasir_jangda_profile.json</item>
    </string-array>

    <!-- Keep them in order as instructor_names are in -->
    <array name="instructor_images">
        <item>muhammadalshareef</item>
        <item>abueesa</item>
        <item>yasirqadhi</item>
        <item>waleed</item>
        <item>yasir</item>
        <item>muhammadalshareef</item>
        <item>omar</item>
        <item>kamal</item>
        <item>reda</item>
        <item>riad</item>
        <item>saad</item>
        <item>abdulbary</item>
        <item>ahsan</item>
        <item>navaid</item>
        <item>said</item>
        <item>faqih</item>
        <item>yasmin</item>
        <item>abdulnasir</item>
    </array>

    <string name="register">Register</string>
    <string name="more_info">More Info</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="almaghrib_talks">AlMaghrib Talks</string>
    <string name="blog_and_social"><![CDATA[Blog & Social]]></string>
    <string name="check_in">Check In</string>
    <string name="more_text">More</string>

    <string name="gravatar_avatar_url">https://www.gravatar.com/avatar/</string>

    <string name="your_qr_code_for">Your QR code for</string>
    <string name="qr_code_instructions">Show the QR code to any of our volunteers at the registration desk for a quick check in.</string>

    <string name="payment_methods">Payment Methods</string>
    <string name="order_history">Order History</string>
    <string name="exam_history">Exam History</string>
    <string name="receipt">Receipt</string>
    <string name="view_more">View More</string>
    <string name="view">View</string>

    <string name="seminar_banner_name">seminar_banner_name</string>
    <string name="seminar_info_price_title">Price</string>
    <string name="seminar_info_price_date">Date</string>
    <string name="seminar_info_title_venue">Venue</string>
    <string name="seminar_info_about_me">About Me</string>

    <string name="read_more">Read More</string>

</resources>
