<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/intro_screen"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/choose_city_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/citySpinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/channel_titles"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linearLayout"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/have_almaghrib_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/startup_screen_login_background"
                android:ems="11"
                android:textSize="16sp"
                android:gravity="center"
                android:hint="username"
                android:inputType="textEmailAddress"
                android:minHeight="35dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/startup_screen_login_background"
                android:ems="11"
                android:textSize="16sp"
                android:gravity="center"
                android:hint="password"
                android:inputType="textPassword"
                android:minHeight="35dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="@drawable/startup_screen_buttons"
                android:gravity="center"
                android:minHeight="30dp"
                android:minWidth="70dp"
                android:onClick="goButtonAction"
                android:text="@string/startup_screen_go_text"
                android:textColor="@color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75dp"
            android:maxWidth="130dp"
            android:maxHeight="130dp"
            android:src="@drawable/am_no_bkgrd"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
    </RelativeLayout>

</FrameLayout>